--- a/views/cms/proposals_discussion_plugin/_topic.html.erb
+++ b/views/cms/proposals_discussion_plugin/_topic.html.erb
@@ -11,3 +11,8 @@
 
 <%= labelled_colorpicker_field(_('Color:'), :article, :color) %>
 <span id="color_preview" class = "color_marker" style="background-color: <%= @article.color %>" ></span>
+
+<%= f.fields_for :image_builder, @article.image do |i| %>
+  <%= file_field_or_thumbnail(_('Image:'), @article.image, i)%>
+  <%= _("Max size: %s (.jpg, .gif, .png)")% Image.max_size.to_humanreadable %>
+<% end %>
