proposals_discussion: added rss link to discussion page

--- a/views/content_viewer/discussion.html.erb
+++ b/views/content_viewer/discussion.html.erb
@@ -1,5 +1,7 @@
 <%= javascript_include_tag 'plugins/proposals_discussion/proposals_list.js' %>
 
+<%= add_rss_feed_to_head(@page.name, @page.feed.url) if @page.feed %>
+
 <div class="description">
   <%= @page.body %>
 </div>
