--- a/views/content_viewer/discussion.html.erb
+++ b/views/content_viewer/discussion.html.erb
@@ -1,14 +1,14 @@
 <%= javascript_include_tag 'plugins/proposals_discussion/proposals_list.js' %>
 
-<%= add_rss_feed_to_head(@page.name, @page.feed.url) if @page.feed %>
+<%= add_rss_feed_to_head(discussion.name, discussion.feed.url) if discussion.feed %>
 
 <div class="description">
-  <%= @page.body %>
+  <%= discussion.body %>
 </div>
 
-<% if @page.allow_create?(user) %>
+<% if discussion.allow_create?(user) %>
 <div class="actions">
-  <%= link_to url_for({:controller => 'cms', :action => 'new', :type => "ProposalsDiscussionPlugin::Topic", :parent_id => @page.id}), :class => 'button with-text icon-add' do %>
+  <%= link_to url_for({:controller => 'cms', :action => 'new', :type => "ProposalsDiscussionPlugin::Topic", :parent_id => discussion.id}), :class => 'button with-text icon-add' do %>
     <strong><%= _("New Topic") %></strong>
   <% end %>
 </div>
@@ -17,11 +17,11 @@
 <div class="topics js-masonry" data-masonry-options='{ "itemSelector": ".topic-item", "columnWidth": 200 }'>
   <div class="actions topic-item">
     <div class="topic-color"></div>
-    <%= link_to url_for({:controller => 'proposals_discussion_plugin_myprofile', :action => 'select_topic', :parent_id => @page.id}), :class => 'button with-text icon-add' do %>
+    <%= link_to url_for({:controller => 'proposals_discussion_plugin_myprofile', :action => 'select_topic', :parent_id => discussion.id}), :class => 'button with-text icon-add' do %>
       <strong><%= _("Send your proposal!") %></strong>
     <% end %>
   </div>
-  <% @page.topics.includes(:profile).each do |topic| %>
+  <% discussion.topics.includes(:profile).each do |topic| %>
     <div class="topic-item" id="topic-<%= topic.id %>">
       <%= render :file => 'content_viewer/topic', :locals => {:topic => topic, :list_view => true} %>
     </div>
