proposals_discussion: display an error when trying to create a proposal without a topic

--- a/views/proposals_discussion_plugin_myprofile/select_topic.html.erb
+++ b/views/proposals_discussion_plugin_myprofile/select_topic.html.erb
@@ -29,6 +29,8 @@
       <div class="clear"></div>
     </div>
 
+    <%= hidden_field_tag :parent_id, @discussion.id %>
+
     <div class="actions">
       <%= submit_button(:next, _('Next')) %>
       <%= button :cancel, _('Cancel'), @discussion.view_url %>
