--- a/views/cms/proposals_discussion_plugin/_proposal.html.erb
+++ b/views/cms/proposals_discussion_plugin/_proposal.html.erb
@@ -23,7 +23,7 @@
 
   <div class="body">
     <% editor_type = 'mceEditor' %>
-    <%= labelled_form_field(@article.topic.discussion.custom_body_label, text_area(:article, :body, :class => editor_type)) %>
+    <%= labelled_form_field(strip_tags(@article.topic.discussion.custom_body_label), text_area(:article, :body, :class => editor_type)) %>
   </div>
 </div>
 
