--- a/views/content_viewer/_proposal_card.html.erb
+++ b/views/content_viewer/_proposal_card.html.erb
@@ -1,7 +1,7 @@
 <div class="proposal">
   <div class="score">
     <% if proposal_card.published? %>
-      <% normalized_score = proposal_card.normalized_score(@holder) %>
+      <% normalized_score = proposal_card.normalized_score %>
       <% pos = 26 * (normalized_score*4 - 1).round %>
       <span title="<%= normalized_score %>" style="background-position-y: -<%= pos %>px">&nbsp;</span>
     <% end %>
