--- a/views/content_viewer/topic.html.erb
+++ b/views/content_viewer/topic.html.erb
@@ -16,38 +16,8 @@
 <% unless list_view %>
   <h4><%= topic.discussion.title %></h4>
 
-  <div class="statistics">
-    <h5><%= _('Statistics') %></h5>
+  <%= render :partial => 'content_viewer/statistics', :locals => {:holder => topic} %>
 
-    <div class="graph">
-      <div id="proposals-time"></div>
-    </div>
-    <%= javascript_include_tag 'plugins/proposals_discussion/proposals_graph.js' %>
-    <script>load_proposals_graph('<%= topic.proposals_per_day.to_json %>', '<%= topic.comments_per_day.to_json %>', '<%= _('Proposals') %>', '<%= _('Comments') %>')</script>
-
-    <div class="summary">
-      <div class="proposals-count">
-        <span class="label"><%= _('Number of Proposals: ') %></span>
-        <span class="content"><%= topic.proposals.count %></span>
-      </div>
-      <div class="participants-count">
-        <span class="label"><%= _('Number of Participants: ') %></span>
-        <span class="content"><%= topic.proposals_authors.count %></span>
-      </div>
-      <div class="comments-count">
-        <span class="label"><%= _('Number of Comments: ') %></span>
-        <span class="content"><%= topic.proposals_comments.count %></span>
-      </div>
-      <div class="active-participants">
-        <span class="label"><%= _('Most active: ') %></span>
-        <span class="content">
-          <% topic.most_active_participants.each do |author| %>
-            <%= link_to profile_image(author, :icon), author.url, :title => author.name %>
-          <% end %>
-        </span>
-      </div>
-    </div>
-  </div>
   <div class="tag_cloud">
     <%= tag_cloud(topic.proposal_tags, :tag, {:action => :tag, :controller => 'search'}, :max_size => 18, :min_size => 10) %>
   </div>
