--- a/views/content_viewer/_proposal_card.html.erb
+++ b/views/content_viewer/_proposal_card.html.erb
@@ -1,3 +1,4 @@
+<% extend ProposalsDiscussionPlugin::ProposalHelper %>
 <div class="proposal">
   <div class="author">
     <%= link_to_profile profile_image(proposal_card.author, :minor, :class => 'disable-zoom') + '<br/>' + proposal_card.author.short_name, proposal_card.author.identifier, :class => 'profile-link' %>
@@ -21,24 +22,14 @@
       <%= proposal_card.abstract %>
     </div>
     <div class="score">
-      <% if proposal_card.published? %>
-        <% normalized_score = proposal_card.normalized_score %>
-        <% pos = 26 * (normalized_score*4 - 1).round %>
-        <span title="<%= normalized_score %>" style="background-position-y: -<%= pos %>px">&nbsp;</span>
-      <% end %>
+      <%= proposal_score(proposal_card) %>
     </div>
-    <% if proposal_card.locations.present? %>
-      <div class="locations">
-        <% proposal_card.locations.each do |location| %>
-          <span class="location"><%= location.name %></span>
-        <% end %>
-      </div>
-    <% end %>
-    <% if !proposal_card.tags.empty? %>
-      <div class="tags" id="article-tags">
-        <%= proposal_card.tags.map { |t| link_to(t, :controller => 'profile', :profile => @profile.identifier, :action => 'tags', :id => t.name ) }.join("\n") %>
-      </div>
-    <% end %>
+    <div class="locations">
+      <%= proposal_locations(proposal_card) %>
+    </div>
+    <div class="tags" id="article-tags">
+      <%= proposal_tags(proposal_card) %>
+    </div>
     <div class="comments-count">
       <%= n_("%s comment", "%s comments", proposal_card.comments_count) % proposal_card.comments_count %>
     </div>
