fix layout issue https://gitlab.com/participa/noosfero/issues/415

--- a/views/content_viewer/discussion.html.erb
+++ b/views/content_viewer/discussion.html.erb
@@ -27,4 +27,6 @@
   <%= link_to_new_proposal(discussion) %>
 </div>
 
-<%= render :partial => 'content_viewer/proposals_list', :locals => {:holder => discussion} %>
+<div class="proposals-discussion-infinite-scroll">
+  <%= render :partial => 'content_viewer/proposals_list', :locals => {:holder => discussion} %>
+</div>
