--- a/views/content_viewer/topic.html.erb
+++ b/views/content_viewer/topic.html.erb
@@ -29,6 +29,8 @@
   </div>
 <% end %>
 
-<%= render :partial => 'content_viewer/proposals_list', :locals => {:holder => topic} %>
+  <div class="<%= list_view ? '' : "proposals-discussion-infinite-scroll"  %>">
+    <%= render :partial => 'content_viewer/proposals_list', :locals => {:holder => topic} %>
+  </div>
 
 </div>
