Display file upload in content edition

--- a/views/cms/proposals_discussion_plugin/_discussion.html.erb
+++ b/views/cms/proposals_discussion_plugin/_discussion.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => 'text_editor_sidebar' %>
+
 <%= required_fields_message %>
 
 <%= required f.text_field('name', :size => '64', :maxlength => 150) %>
