--- a/views/cms/proposals_discussion_plugin/_topic.html.erb
+++ b/views/cms/proposals_discussion_plugin/_topic.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => 'text_editor_sidebar' %>
+
 <%= stylesheet_link_tag 'spectrum.css' %>
 <%= javascript_include_tag "spectrum.js" %>
 <%= javascript_include_tag "colorpicker-noosfero.js" %>
