--- a/views/tasks/proposals_discussion_plugin/_proposal_task_accept_details.html.erb
+++ b/views/tasks/proposals_discussion_plugin/_proposal_task_accept_details.html.erb
@@ -1,4 +1,4 @@
-<%= select_profile_folder(_('Select the folder where the article must be published'), "tasks[#{task.id}][task][article_parent_id]", task.target) %>
+<%= select_profile_folder(_('Select the folder where the article must be published'), "tasks[#{task.id}][task][article_parent_id]", task.target, task.article_parent_id) %>
 
 <%= labelled_form_field _('Comment for author'), f.text_field(:closing_statment, :style => 'width: 488px; height: 30px') %>
 
